[package]
name = "ask-gpt"
version = "0.1.0"
edition = "2024"
authors = ["Zhehan Wang <zhehan0110@gmail.com>"]
description = "A CLI tool to interact with Useful GPT APIs. Now only support DeepSeek."
repository = "github.com/wswzhws/ask-gpt"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
dirs = "6.0.0"
log = "0.4.26"
env_logger = "0.11.7"

clap = { version = "4.5.32", features = [ "derive" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.14", features = ["json"] }

atty = "0.2.14"
url = { version = "2.5.4", features = ["serde"] }
